--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^5.9.19",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "slugify": "^1.4.0"
   }
 }
