--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-validator": "^6.6.1",
+    "helmet": "^4.1.0",
+    "html-to-text": "^5.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19",
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.11",
+    "pug": "^3.0.0",
     "slugify": "^1.4.0"
   }
 }
