photo-upload route

--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "recipes-api",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.2.2",
+    "aws-sdk": "^2.742.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "~4.16.1",
     "express-validator": "^6.6.1",
     "helmet": "^4.1.0",
@@ -21,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "pug": "^3.0.0",
     "slugify": "^1.4.0"
